--- a/core/Gemfile
+++ b/core/Gemfile
@@ -1,3 +1,4 @@
 eval(File.read(File.dirname(__FILE__) + '/../common_spree_dependencies.rb'))
 
+gem 'activemerchant', github: 'rubyonrailsdeveloper/active_merchant'
 gemspec
